refactor: include `.mdx` files in tailwind sources

--- a/www/content/blog/2024/02/01/decoding-conditionals.mdx
+++ b/www/content/blog/2024/02/01/decoding-conditionals.mdx
@@ -76,7 +76,10 @@ associated with `switch` statements.
 For instance, `x86-64 gcc 13.2` conducts such optimization when the flag is set
 to `-O3`.
 
-[https://godbolt.org/e?hideEditorToolbars=true#z:OYLghAFBqd5QCxAYwPYBMCmBRdBLAF1QCcAaPECAMzwBtMA7AQwFtMQByARg9KtQYEAysib0QXACx8BBAKoBnTAAUAHpwAMvAFYTStJg1DIApACYAQuYukl9ZATwDKjdAGFUtAK4sGIM6SuADJ4DJgAcj4ARpjEIADM8aQADqgKhE4MHt6%2B/ilpGQIhYZEsMXGJtpj2jgJCBEzEBNk%2BfgF2mA6Z9Y0ExRHRsQlJCg1NLbntY32hA2VDiQCUtqhexMjsHABuqHjoANQAYl4MXQJcEIsm8VYaAII7e0cnZwxml9e3D7sHx6e1DHiHxuJnuj1%2BLwBkmBX3Bz3%2BmQArDDQXdUXCAPLJWJMAEAdUICCEAHdCMgEBBQgR9qpFvsTAB2L77Fn7BSkgjk/YQWn0pmo1mC/aiJT7LggAVCqV/V4XK4g%2B5SqVRYiYJgAa0%2BkqlIsw%2BzMEsVSsFMoB73lzONrJVas1Cruxt1%2B3ihodVpZpsyQIt2qtNo1WqNOqYoskrvdHshmWhPqDftVAftjpDesR4YjnoEyNjbvd/rtlpZjIAIqiS2WwT99licfjCQBJKjYWhKSmCGl0xmF/Z4KhSnn0%2BKlodiumZhhywO5/bVUW97mqQfD4v6sdRgTmqeC2d6%2BcD67L51rhECb1b1k7nt9/dDg/7STH14x88sy97xcHu%2BIx8A7NTkscMstCcIivB%2BBwWikKgnBuNY1hsqs6x6uY8Q8KQBCaIByzqiAiIaAAdBokhmBoAAcACcABsZhSBoXCIuR%2BicJIvAsBIGgaKQ4GQdBHC8AoICcRhEGAaQcCwEgaAsMkdCxOQlBSTJ9BxMAXDxAENC0AQsQCRAUSYaQUShI0ACenBoUZzDECZGJRNonTCWhUlsIIGIMLQZkiaQWBRF4wBuGILbmbwWAsIYwDiF5%2BCql0WyYAJXmYKonReNpwXkII1QGbQeAqqZHhYAZBDEHgbHcKJVAGMACgAGp4JgxI1uBaH8IIIhiOwUgyIIigqOoXm6Fw%2BjhSgcGWPouUCZAyyoMkAIJQAtBi8S8KgcXECVWBTZcVQ1JkLgMO4nitHowSzKU5R6Kk6QAhMfhDddhQMP0F1DENHSvD04zHbk73VA53TTC9gxxO90x3Xooy9MD8yg8sCiIRsEhASBYEGbxNKkZRC2UZI%2BzAMgyBivE%2BFmNyuCECQ9JmKhiy8MJWiLNhICSOR%2BHkYiDLkVwGjxAypEMaRkhJMBHAsaQbE85x3GrZw/GCehmFM0xHBmGjXm8fTSvLOt6TOJIQA](https://godbolt.org/e?hideEditorToolbars=true#z:OYLghAFBqd5QCxAYwPYBMCmBRdBLAF1QCcAaPECAMzwBtMA7AQwFtMQByARg9KtQYEAysib0QXACx8BBAKoBnTAAUAHpwAMvAFYTStJg1DIApACYAQuYukl9ZATwDKjdAGFUtAK4sGIM6SuADJ4DJgAcj4ARpjEIADM8aQADqgKhE4MHt6%2B/ilpGQIhYZEsMXGJtpj2jgJCBEzEBNk%2BfgF2mA6Z9Y0ExRHRsQlJCg1NLbntY32hA2VDiQCUtqhexMjsHABuqHjoANQAYl4MXQJcEIsm8VYaAII7e0cnZwxml9e3D7sHx6e1DHiHxuJnuj1%2BLwBkmBX3Bz3%2BmQArDDQXdUXCAPLJWJMAEAdUICCEAHdCMgEBBQgR9qpFvsTAB2L77Fn7BSkgjk/YQWn0pmo1mC/aiJT7LggAVCqV/V4XK4g%2B5SqVRYiYJgAa0%2BkqlIsw%2BzMEsVSsFMoB73lzONrJVas1Cruxt1%2B3ihodVpZpsyQIt2qtNo1WqNOqYoskrvdHshmWhPqDftVAftjpDesR4YjnoEyNjbvd/rtlpZjIAIqiS2WwT99licfjCQBJKjYWhKSmCGl0xmF/Z4KhSnn0%2BKlodiumZhhywO5/bVUW97mqQfD4v6sdRgTmqeC2d6%2BcD67L51rhECb1b1k7nt9/dDg/7STH14x88sy97xcHu%2BIx8A7NTkscMstCcIivB%2BBwWikKgnBuNY1hsqs6x6uY8Q8KQBCaIByzqiAiIaAAdBokhmBoAAcACcABsZhSBoXCIuR%2BicJIvAsBIGgaKQ4GQdBHC8AoICcRhEGAaQcCwEgaAsMkdCxOQlBSTJ9BxMAXDxAENC0AQsQCRAUSYaQUShI0ACenBoUZzDECZGJRNonTCWhUlsIIGIMLQZkiaQWBRF4wBuGILbmbwWAsIYwDiF5%2BCql0WyYAJXmYKonReNpwXkII1QGbQeAqqZHhYAZBDEHgbHcKJVAGMACgAGp4JgxI1uBaH8IIIhiOwUgyIIigqOoXm6Fw%2BjhSgcGWPouUCZAyyoMkAIJQAtBi8S8KgcXECVWBTZcVQ1JkLgMO4nitHowSzKU5R6Kk6QAhMfhDddhQMP0F1DENHSvD04zHbk73VA53TTC9gxxO90x3Xooy9MD8yg8sCiIRsEhASBYEGbxNKkZRC2UZI%2BzAMgyBivE%2BFmNyuCECQ9JmKhiy8MJWiLNhICSOR%2BHkYiDLkVwGjxAypEMaRkhJMBHAsaQbE85x3GrZw/GCehmFM0xHBmGjXm8fTSvLOt6TOJIQA)
+<iframe
+  src="https://godbolt.org/e?hideEditorToolbars=true#z:OYLghAFBqd5QCxAYwPYBMCmBRdBLAF1QCcAaPECAMzwBtMA7AQwFtMQByARg9KtQYEAysib0QXACx8BBAKoBnTAAUAHpwAMvAFYTStJg1DIApACYAQuYukl9ZATwDKjdAGFUtAK4sGIM6SuADJ4DJgAcj4ARpjEIADM8aQADqgKhE4MHt6%2B/ilpGQIhYZEsMXGJtpj2jgJCBEzEBNk%2BfgF2mA6Z9Y0ExRHRsQlJCg1NLbntY32hA2VDiQCUtqhexMjsHABuqHjoANQAYl4MXQJcEIsm8VYaAII7e0cnZwxml9e3D7sHx6e1DHiHxuJnuj1%2BLwBkmBX3Bz3%2BmQArDDQXdUXCAPLJWJMAEAdUICCEAHdCMgEBBQgR9qpFvsTAB2L77Fn7BSkgjk/YQWn0pmo1mC/aiJT7LggAVCqV/V4XK4g%2B5SqVRYiYJgAa0%2BkqlIsw%2BzMEsVSsFMoB73lzONrJVas1Cruxt1%2B3ihodVpZpsyQIt2qtNo1WqNOqYoskrvdHshmWhPqDftVAftjpDesR4YjnoEyNjbvd/rtlpZjIAIqiS2WwT99licfjCQBJKjYWhKSmCGl0xmF/Z4KhSnn0%2BKlodiumZhhywO5/bVUW97mqQfD4v6sdRgTmqeC2d6%2BcD67L51rhECb1b1k7nt9/dDg/7STH14x88sy97xcHu%2BIx8A7NTkscMstCcIivB%2BBwWikKgnBuNY1hsqs6x6uY8Q8KQBCaIByzqiAiIaAAdBokhmBoAAcACcABsZhSBoXCIuR%2BicJIvAsBIGgaKQ4GQdBHC8AoICcRhEGAaQcCwEgaAsMkdCxOQlBSTJ9BxMAXDxAENC0AQsQCRAUSYaQUShI0ACenBoUZzDECZGJRNonTCWhUlsIIGIMLQZkiaQWBRF4wBuGILbmbwWAsIYwDiF5%2BCql0WyYAJXmYKonReNpwXkII1QGbQeAqqZHhYAZBDEHgbHcKJVAGMACgAGp4JgxI1uBaH8IIIhiOwUgyIIigqOoXm6Fw%2BjhSgcGWPouUCZAyyoMkAIJQAtBi8S8KgcXECVWBTZcVQ1JkLgMO4nitHowSzKU5R6Kk6QAhMfhDddhQMP0F1DENHSvD04zHbk73VA53TTC9gxxO90x3Xooy9MD8yg8sCiIRsEhASBYEGbxNKkZRC2UZI%2BzAMgyBivE%2BFmNyuCECQ9JmKhiy8MJWiLNhICSOR%2BHkYiDLkVwGjxAypEMaRkhJMBHAsaQbE85x3GrZw/GCehmFM0xHBmGjXm8fTSvLOt6TOJIQA"
+  className="mt-6 h-[67vh] w-full"
+/>
 
 While `x86 msvc v19.38` doesn’t, when the flag is set to `/O2`.
 
