--- a/www/content/blog/2024/02/01/decoding-conditionals.mdx
+++ b/www/content/blog/2024/02/01/decoding-conditionals.mdx
@@ -15,6 +15,8 @@ authors:
 publishedAt: 2024-02-01
 ---
 
+import Iframe from "@/components/ui/iframe";
+
 Have you ever been confused about when to use `if-else` statements, `switch`
 cases, or other conditionals in your code? This article may help you to clarify
 your thoughts.
