feat: add remark-directive and remark-math

--- a/www/content/blog/examples/pluto.mdx
+++ b/www/content/blog/examples/pluto.mdx
@@ -18,13 +18,23 @@ used Newtonian mechanics to predict the position of the then-undiscovered planet
 [Neptune](https://wikipedia.org/wiki/Neptune) after analyzing perturbations in
 the orbit of [Uranus](https://wikipedia.org/wiki/Uranus).
 
+## Misc Examples
+
+### Divider
+
 ---
 
+### Autolink Literal
+
 Just a link: www.nasa.gov.
+
+### Lists
 
 - Lists
 - [ ] todo
 - [x] done
+
+### Table
 
 A table:
 
